--- a/styles/scss/variable.scss
+++ b/styles/scss/variable.scss
@@ -4,11 +4,11 @@ $bodyfont: "DM Sans";
 $headingfont: "DM Sans";
 
 /*Theme Colors*/
-$bodycolor: #e9e2d5;
+$bodycolor: #ff0000;
 $headingtext: #3e4555;
 $bodytext: #8d97ad;
 $themecolor: #389ec2;
-$themecolor-alt: #e9e2d5;
+$themecolor-alt: #ff0000;
 $themecolor-dark: #389ec2;
 
 /*bootstrap Color*/
@@ -21,19 +21,19 @@ $inverse: #3e4555;
 $muted: #8d97ad;
 $dark: #263238;
 $light: #ce3a7f;
-$extra-light: #e9e2d5;
+$extra-light: #ff0000;
 $secondary: #727b84;
 $facebook: #3b5a9a;
 $twitter: #56adf2;
 
 /*Light colors*/
-$light-danger: #e9e2d5;
-$light-success: #e9e2d5;
-$light-warning: #e9e2d5;
-$light-primary: #e9e2d5;
-$light-info: #e9e2d5;
-$light-inverse: #e9e2d5;
-$light-megna: #e9e2d5;
+$light-danger: #ff0000;
+$light-success: #ff0000;
+$light-warning: #ff0000;
+$light-primary: #ff0000;
+$light-info: #ff0000;
+$light-inverse: #ff0000;
+$light-megna: #ff0000;
 
 $danger-dark: #d73e6b;
 $success-dark: #1dc8cc;
@@ -45,7 +45,7 @@ $inverse-dark: #232a37;
 $dark-transparent: rgba(0, 0, 0, 0.05);
 
 /*Normal Color*/
-$white: #e9e2d5;
+$white: #ff0000;
 $red: #fb3a3a;
 $yellow: #fed700;
 $purple: #7460ee;
