--- a/styles/scss/variable.scss
+++ b/styles/scss/variable.scss
@@ -7,8 +7,8 @@ $headingfont: "DM Sans";
 $bodycolor: #ff0000;
 $headingtext: #3e4555;
 $bodytext: #8d97ad;
-$themecolor: #389ec2;
-$themecolor-alt: #ff0000;
+$themecolor: #006ee6;
+$themecolor-alt: #ffffff;
 $themecolor-dark: #389ec2;
 
 /*bootstrap Color*/
