--- a/styles/scss/variable.scss
+++ b/styles/scss/variable.scss
@@ -4,12 +4,12 @@ $bodyfont: "DM Sans";
 $headingfont: "DM Sans";
 
 /*Theme Colors*/
-$bodycolor: #ff0000;
+$bodycolor: #ffffff;
 $headingtext: #3e4555;
 $bodytext: #8d97ad;
 $themecolor: #006ee6;
 $themecolor-alt: #ffffff;
-$themecolor-dark: #389ec2;
+$themecolor-dark: #ff0000;
 
 /*bootstrap Color*/
 $danger: #ff4d7e;
