--- a/styles/scss/variable.scss
+++ b/styles/scss/variable.scss
@@ -7,7 +7,7 @@ $headingfont: "DM Sans";
 $bodycolor: #ffffff;
 $headingtext: #3e4555;
 $bodytext: #8d97ad;
-$themecolor: #006ee6;
+$themecolor: #8d97ad;
 $themecolor-alt: #ffffff;
 $themecolor-dark: #ff0000;
 
