--- a/styles/scss/variable.scss
+++ b/styles/scss/variable.scss
@@ -9,7 +9,7 @@ $headingtext: #3e4555;
 $bodytext: #8d97ad;
 $themecolor: #8d97ad;
 $themecolor-alt: #ffffff;
-$themecolor-dark: #ff0000;
+$themecolor-dark: #ffffff;
 
 /*bootstrap Color*/
 $danger: #ff4d7e;
