--- a/styles/scss/variable.scss
+++ b/styles/scss/variable.scss
@@ -9,7 +9,7 @@ $headingtext: #3e4555;
 $bodytext: #8d97ad;
 $themecolor: #8d97ad;
 $themecolor-alt: #ffffff;
-$themecolor-dark: #ffffff;
+$themecolor-dark: #ff0000;
 
 /*bootstrap Color*/
 $danger: #ff4d7e;
@@ -45,7 +45,7 @@ $inverse-dark: #232a37;
 $dark-transparent: rgba(0, 0, 0, 0.05);
 
 /*Normal Color*/
-$white: #ff0000;
+$white: #ffffff;
 $red: #fb3a3a;
 $yellow: #fed700;
 $purple: #7460ee;
