--- a/styles/scss/variable.scss
+++ b/styles/scss/variable.scss
@@ -13,14 +13,14 @@ $themecolor-dark: #ff0000;
 
 /*bootstrap Color*/
 $danger: #ff4d7e;
-$success: #2cdd9b;
+$success: #ffffff;
 $warning: #fec500;
 $primary: #316ce8;
 $info: #0164d3;
 $inverse: #3e4555;
 $muted: #8d97ad;
 $dark: #263238;
-$light: #ce3a7f;
+$light: #ff0000;
 $extra-light: #ff0000;
 $secondary: #727b84;
 $facebook: #3b5a9a;
