--- a/styles/scss/variable.scss
+++ b/styles/scss/variable.scss
@@ -28,7 +28,7 @@ $twitter: #56adf2;
 
 /*Light colors*/
 $light-danger: #ff0000;
-$light-success: #ff0000;
+$light-success: #ffffff;
 $light-warning: #ff0000;
 $light-primary: #ff0000;
 $light-info: #ff0000;
