--- a/styles/scss/variable.scss
+++ b/styles/scss/variable.scss
@@ -20,7 +20,7 @@ $info: #0164d3;
 $inverse: #3e4555;
 $muted: #8d97ad;
 $dark: #263238;
-$light: #ff0000;
+$light: #ffffff;
 $extra-light: #ff0000;
 $secondary: #727b84;
 $facebook: #3b5a9a;
@@ -28,7 +28,7 @@ $twitter: #56adf2;
 
 /*Light colors*/
 $light-danger: #ff0000;
-$light-success: #ffffff;
+$light-success: #ff0000;
 $light-warning: #ff0000;
 $light-primary: #ff0000;
 $light-info: #ff0000;
@@ -36,7 +36,7 @@ $light-inverse: #ff0000;
 $light-megna: #ff0000;
 
 $danger-dark: #d73e6b;
-$success-dark: #1dc8cc;
+$success-dark: #ffffff;
 $warning-dark: #dcaf17;
 $primary-dark: #345bcb;
 $info-dark: #2c73cb;
