--- a/styles/scss/variable.scss
+++ b/styles/scss/variable.scss
@@ -8,19 +8,19 @@ $bodycolor: #ffffff;
 $headingtext: #3e4555;
 $bodytext: #8d97ad;
 $themecolor: #8d97ad;
-$themecolor-alt: #ffffff;
+$themecolor-alt: #ff0000;
 $themecolor-dark: #ff0000;
 
 /*bootstrap Color*/
 $danger: #ff4d7e;
-$success: #ffffff;
+$success: #1dc8cd;
 $warning: #fec500;
 $primary: #316ce8;
 $info: #0164d3;
 $inverse: #3e4555;
 $muted: #8d97ad;
 $dark: #263238;
-$light: #ffffff;
+$light: #ff0000;
 $extra-light: #ff0000;
 $secondary: #727b84;
 $facebook: #3b5a9a;
