--- a/styles/scss/variable.scss
+++ b/styles/scss/variable.scss
@@ -13,7 +13,7 @@ $themecolor-dark: #ff0000;
 
 /*bootstrap Color*/
 $danger: #ff4d7e;
-$success: #1dc8cd;
+$success: #ff0000;
 $warning: #fec500;
 $primary: #316ce8;
 $info: #0164d3;
@@ -36,10 +36,10 @@ $light-inverse: #ff0000;
 $light-megna: #ff0000;
 
 $danger-dark: #d73e6b;
-$success-dark: #ffffff;
+$success-dark: #024e4d;
 $warning-dark: #dcaf17;
 $primary-dark: #345bcb;
-$info-dark: #2c73cb;
+$info-dark: #ffffff;
 $red-dark: #d61f1f;
 $inverse-dark: #232a37;
 $dark-transparent: rgba(0, 0, 0, 0.05);
