--- a/styles/scss/variable.scss
+++ b/styles/scss/variable.scss
@@ -36,7 +36,7 @@ $light-inverse: #ff0000;
 $light-megna: #ff0000;
 
 $danger-dark: #d73e6b;
-$success-dark: #024e4d;
+$success-dark: #ff0000;
 $warning-dark: #dcaf17;
 $primary-dark: #345bcb;
 $info-dark: #ffffff;
